--- a/rag_data/add_docs_pq.ipynb
+++ b/rag_data/add_docs_pq.ipynb
@@ -260,6 +260,73 @@
    "id": "61e96179238b30e7",
    "outputs": [],
    "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T13:18:28.662216Z",
+     "start_time": "2025-06-17T13:18:28.592449Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json\n",
+    "\n",
+    "# Load the original JSON structure from a file or raw string\n",
+    "with open(\"raw_data\\\\venus_errors.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Extract the error handling details\n",
+    "errors = data[0]['details']['error_handling']\n",
+    "\n",
+    "# Loop through the errors and create separate JSON metadata blocks\n",
+    "output_errors = []\n",
+    "for error in errors:\n",
+    "    formatted_error = {\n",
+    "        \"type\": \"error_handling\",\n",
+    "        \"metadata\": {\n",
+    "            \"title\": f\"Error Code {error['error_code']}: {error['error_title']}\",\n",
+    "            \"description\": f\"Details about the Venus error code {error['error_code']} ({error['error_title']}).\",\n",
+    "            \"tags\": [\"runtime_errors\", \"Venus\", \"error_handling\", error['error_code']],\n",
+    "            \"documentation_url\": \"https://venuslibrarydocumentation.readthedocs.io/en/latest/RuntimeErrors.html#runtime-errors\"\n",
+    "        },\n",
+    "        \"details\": {\n",
+    "            \"error_handling\": [\n",
+    "                {\n",
+    "                    \"error_code\": error[\"error_code\"],\n",
+    "                    \"error_title\": error[\"error_title\"],\n",
+    "                    \"description\": error[\"description\"],\n",
+    "                    \"user_action\": error.get(\"user_action\", \"No user action provided.\"),\n",
+    "                    \"developer_action\": error.get(\"developer_action\", \"No developer action provided.\")\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    "    output_errors.append(formatted_error)\n",
+    "\n",
+    "# Save each error to a separate JSON file or combine into a larger structure\n",
+    "for i, error_block in enumerate(output_errors):\n",
+    "    filename = f\"error_{error_block['details']['error_handling'][0]['error_code']}.json\"\n",
+    "    with open(filename, 'w') as output_file:\n",
+    "        json.dump(error_block, output_file, indent=4)\n",
+    "\n",
+    "# Optionally save to a combined single file\n",
+    "with open(\"raw_data/reformatted_errors.json\", \"w\") as combined_file:\n",
+    "    json.dump(output_errors, combined_file, indent=4)\n",
+    "\n",
+    "print(\"Errors reformatted and saved successfully.\")\n"
+   ],
+   "id": "b28cb20d46d11276",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Errors reformatted and saved successfully.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
